atualização login cadastro

--- a/login.html
+++ b/login.html
@@ -14,16 +14,14 @@
     <header id="header">
         <a href="index.html"><i class="bi bi-globe-americas"></i></a>
         <div class="flex">
-
+            <a class="logo"><i></i></a>
             <nav class="navegacao">
-                <a href="#">about</a>
-                <a href="#">cadastro</a>
-                <a href="#">Dashbord</a>
-                <a href="#">Login</a>
-                <a href="#">conteudo</a>
+                <a href="principal.html">Home</a>
+                <a href="">About</a>
+                <a href="">services</a>
+                <a href="login.html">Login</a>
+                <a href="cadastro.html">Cadastrar</a>
             </nav>
-        </div><!-- div da navegação-->
-
     </header>
         
     <div class="container">
@@ -35,19 +33,13 @@
                     <input type="email" required>
                     <label>Email</label>
                 </div>
+
                 <div class="input-box">
                     <span class="icon"><ion-icon name="lock-closed-outline"></ion-icon> </span>
                     <input type="password" required>
                     <label>Senha</label>
                 </div>
-                <div class="lembrar-senha">
-                    <label><input type="checkbox">Lembrar senha</label>
-                    <a href="#">Esquceu senha</a>
-                </div>
                 <button type="submit" class="btn">Login</button>
-                <div class="btn-login">
-                    <p>Esquece sua conta?<a href="#">Sei la</a></p>
-                </div>
             </form>
         </div>
 
