--- a/principal.html
+++ b/principal.html
@@ -13,9 +13,8 @@
             <a href="">Home</a>
             <a href="">About</a>
             <a href="">services</a>
-            <a href="">cadastro</a>
-            <a href="">Dashbord</a>
-            <a href="">Login</a>
+            <a href="login.html">Login</a>
+            <a href="cadastro.html">Cadastrar</a>
         </nav>
     </header>
 </body>
