--- a/login.html
+++ b/login.html
@@ -5,23 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/login.css">
     <link rel="stylesheet" href="css/header.css">
-    <!-- <meta http-equiv="refresh" content="2"> -->
     <title>Document</title>
 </head>
 <body>
 
-
     <header id="header">
-        <a href="index.html"><i class="bi bi-globe-americas"></i></a>
         <div class="flex">
-            <a class="logo"><i></i></a>
             <nav class="navegacao">
                 <a href="principal.html">Home</a>
-                <a href="">About</a>
-                <a href="">services</a>
+                <a href="pagina01.html">Conteúdo</a>
+                <a href="">Sobre mim</a>
                 <a href="login.html">Login</a>
                 <a href="cadastro.html">Cadastrar</a>
             </nav>
+        </div>
     </header>
         
     <div class="container">
@@ -29,24 +26,22 @@
             <h2>Login</h2>
             <form action="#">
                 <div class="input-box">
-                    <span class="icon"><ion-icon name="mail-outline"></ion-icon></span><!-- ionic.io nome do site do icone -->
-                    <input type="email" required>
-                    <label>Email</label>
+                    <span class="icon"><img src="img/e-mail.png" alt="ícone de E-mail"></span>
+                    <input id="input_email" type="email" placeholder="Email">
+                    <span id="resultado_email" class="resultado"></span> <!--  input do email-->
                 </div>
 
                 <div class="input-box">
-                    <span class="icon"><ion-icon name="lock-closed-outline"></ion-icon> </span>
-                    <input type="password" required>
-                    <label>Senha</label>
+                    <span class="icon"><img src="img/cadeado.png" alt="ícone de cadeado"></span>
+                    <input id="input_senha" type="password" placeholder="Senha">
+                    <span id="resultado_senha" class="resultado"></span> <!-- input da senha-->
                 </div>
-                <button type="submit" class="btn">Login</button>
+                <button type="submit" class="btn" onclick="logar()">Login </button> <!--botao login-->
             </form>
         </div>
 
     </div>
     
-    <script src="rolagem-header.js"></script>
-    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>    
+    <script src="js/login.js"></script>
 </body>
 </html>
