--- a/principal.html
+++ b/principal.html
@@ -7,15 +7,16 @@
     <link rel="stylesheet" href="css/principal.css">
 </head>
 <body>
+    
     <header>
-        <a class="logo"><i></i></a>
         <nav class="navegacao">
-            <a href="">Home</a>
-            <a href="">About</a>
-            <a href="">services</a>
+            <a href="principal.html">Home</a>
+            <a href="pagina01.html">Conteúdo</a>
+            <a href="">Sobre mim</a>
             <a href="login.html">Login</a>
-            <a href="cadastro.html">Cadastrar</a>
+            <a href="cadastro.html">Cadastro</a>
         </nav>
+
     </header>
 </body>
 </html>
