atualizacoes do sobre mim

--- a/cadastro.html
+++ b/cadastro.html
@@ -9,21 +9,21 @@
     <title>index</title>
 </head>
 <body>
-<!-- 
+
     <header id="header">
         <div class="flex">
           
             <nav class="navegacao">
                 <a href="principal.html">Home</a>
                 <a href="pagina01.html">Conteúdo</a>
-                <a href="">Sobre mim</a>
+                <a href="sobre_mim.html">Sobre mim</a>
                 <a href="login.html">Login</a>
                 <a href="cadastro.html">Cadastro</a>
             </nav>
         </div>
 
     </header>
-         -->
+        
     <div class="container">
         <div class="cadastro-box">
 
@@ -36,7 +36,7 @@
 
             <div class="input-box">
                 <span class="icon"><img src="img/telefone.png" alt="ícone de telefone"></span>
-                <input id="input_tel" type="tel" onkeyup="validar_tel()" placeholder="Telefone">
+                <input id="input_tel" maxlength="11" type="tel" onkeyup="validar_tel()" placeholder="Telefone">
                 <span id="resultado_tel" class="resultado"></span>
             </div>
 
