--- a/pagina02.html
+++ b/pagina02.html
@@ -15,7 +15,7 @@
             <nav class="navegacao">
                 <a href="principal.html">Home</a>
                 <a href="pagina01.html">Conteúdo</a>
-                <a href="">Sobre mim</a>
+                <a href="sobre_mim.html">Sobre mim</a>
                 <a href="login.html">Login</a>
                 <a href="cadastro.html">Cadastro</a>
             </nav>
@@ -61,16 +61,3 @@
     <script src="js/rolagem-header.js"></script>
     </body>
 </html>
-
-<!-- Sendo assim, Nasceu a idéia da criação de um site com as informações introdutorias a respeito do clarinete. Com a introdução básica 
-    a respeito do mundo musical o site contém também login e cadastro 
-
-    Ao comecar a dar aulas de clarinete notei que: alguns alunos tinham poucas ou nenhuma informação a respeito do intrumento como:
-    A história e origem intrumento; 
-    Como monta-lo;
-    As partes do instrumento ou peças;
-    A respiração para toca-lo;
-    A embocadura necessária para a primeira nota.
-    
-    
-  -->
