--- a/principal.html
+++ b/principal.html
@@ -12,11 +12,14 @@
         <nav class="navegacao">
             <a href="principal.html">Home</a>
             <a href="pagina01.html">Conteúdo</a>
-            <a href="">Sobre mim</a>
+            <a href="sobre_mim.html">Sobre mim</a>
             <a href="login.html">Login</a>
             <a href="cadastro.html">Cadastro</a>
         </nav>
 
     </header>
+
 </body>
+
+
 </html>
