--- a/login.html
+++ b/login.html
@@ -11,16 +11,18 @@
 
     <header id="header">
         <div class="flex">
+          
             <nav class="navegacao">
                 <a href="principal.html">Home</a>
                 <a href="pagina01.html">Conteúdo</a>
-                <a href="">Sobre mim</a>
+                <a href="sobre_mim.html">Sobre mim</a>
                 <a href="login.html">Login</a>
-                <a href="cadastro.html">Cadastrar</a>
+                <a href="cadastro.html">Cadastro</a>
             </nav>
         </div>
+
     </header>
-        
+ 
     <div class="container">
         <div class="login-box">
             <h2>Login</h2>
