--- a/pagina01.html
+++ b/pagina01.html
@@ -12,15 +12,15 @@
 
     <header id="header">
         <div class="flex">
-
+          
             <nav class="navegacao">
                 <a href="principal.html">Home</a>
                 <a href="pagina01.html">Conteúdo</a>
-                <a href="">Sobre mim</a>
+                <a href="sobre_mim.html">Sobre mim</a>
                 <a href="login.html">Login</a>
                 <a href="cadastro.html">Cadastro</a>
             </nav>
-        </div><!-- div da navegação -->
+        </div>
 
     </header>
 
