--- a/pagina03.html
+++ b/pagina03.html
@@ -15,7 +15,7 @@
             <nav class="navegacao">
                 <a href="principal.html">Home</a>
                 <a href="pagina01.html">Conteúdo</a>
-                <a href="">Sobre mim</a>
+                <a href="sobre_mim.html">Sobre mim</a>
                 <a href="login.html">Login</a>
                 <a href="cadastro.html">Cadastro</a>
             </nav>
