--- a/cadastro.html
+++ b/cadastro.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/cadastro.css">
-    <!-- <meta http-equiv="refresh" content="2"> -->
-    <title>index</title>
+    <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
+
+    <title>Cadastro</title>
 </head>
 <body>
 
