atualizando header e textos

--- a/api-site/public/pagina01.html
+++ b/api-site/public/pagina01.html
@@ -12,11 +12,10 @@
 
     <header id="header">
         <div class="logo">
-            <img src="img/logo.png" alt="Logo do site" >
+            <a href="index.html"><img src="img/logo.png" alt="Logo do site" ></a>
         </div>
             
             <div class="navegacao">
-                <a href="index.html">Home</a>
                 <a href="pagina01.html">Conteúdo</a>
                 <a href="sobre_mim.html">Sobre mim</a>
                 <a href="login.html">Login</a>
@@ -33,14 +32,14 @@
                 <img src="img/historia.jpg" alt="Pessoas tocando chalumeau">
              </div>
 
-            <p> O clarinete, ou clarineta é um instrumento musical feito comumentemente feito de ébano, de um tubo cilíndrico. Contudo, existem clarintes de outros materiais como: metal, granadilha ou plástico. Geralemente os fabricados de ébano possuem um valor elevado comparado com outros materiais, existem também clarinetes feitos da madeira de jacarandá produzidos no interior da bahia e possuem uma cor mais avermelhado.
-            Normalmente dizem que o clarinete foi inventado pelo fabricante de instrumentos Johann Christoph Denner em Nuremberg Alemanha, criada no início do século XVIII. Um instrumento parecido o chalumeau já existia. Pórem, o chalumeau soava bem nos registros mais graves, não possuindo a grande extensão comparado ao clarinete dos dias atuais. O clarinete sofreu grande evoluções até chegar ao formato atual. </p>
+            <p>O clarinete, ou clarineta, é um instrumento musical normalmente feito de ébano, com um tubo cilíndrico. Contudo, existem clarinetes de outros materiais, como metal, granadilha ou plástico. Geralmente, os fabricados de ébano possuem um valor mais alto comparado aos feitos de outros materiais. Existem também clarinetes feitos de madeira de jacarandá, produzidos no interior da Bahia, que possuem uma cor mais avermelhada.
+            Historiadores dizem que o clarinete foi inventado pelo fabricante de instrumentos Johann Christoph Denner, em Nuremberg, Alemanha, no início do século XVIII. Um instrumento parecido, o chalumeau, já existia. Porém, o chalumeau soava bem nos registros mais graves, não possuindo a grande extensão tonal comparada ao clarinete dos dias atuais. O clarinete sofreu grandes evoluções até chegar ao formato atual. </p>
 
            <div class="imagem_texto">
                <img src="img/clarinete_e_chalumenau.png" alt="instrumento chalumeau e o chalumeau">
             </div>
            
-           <p>O clarinete é descendente direto do chalumeau muito popular na idade média. Em 1690 o alemão johann, acrescentou à sua charamela uma chave para que pudesse estender a sua gama de oitavas, o que trouxe muito mais possibilidades de notas para o instrumento. Surgindo assim, o clarinete que conhecemos hoje. Logo após essa "renovação" surigu o clarinete que estamos acostumados de ver, pode ser bem parecido com o que voçê possui. O clarinete foi um dos últimos instrumentos de sopro instaurados na orquestra contemporânea, o clarinete é um dos intrumentos mais versáteis comparado com outros instrumentos de sopro a sua versatilidade de notas possuem sonoridades que encaixam desde ao choro, jazz, jazz-brasileiro, orquestras sinfônicas e ademais bandas.</p>
+           <p>O clarinete é descendente direto do chalumeau, muito popular na Idade Média. O alemão Johann Christoph Denner acrescentou à sua charamela uma chave que permitiu estender a gama de oitavas, trazendo muito mais possibilidades de notas para o instrumento. Surgiu assim, o clarinete que conhecemos hoje. Logo após essa "renovação", surgiu o clarinete com o qual estamos acostumados a ver, podendo ser bem parecido com o que você possui. O clarinete foi um dos últimos instrumentos de sopro incorporados na orquestra contemporânea. É um dos instrumentos mais versáteis comparado com outros instrumentos de sopro, com uma versatilidade de notas e sonoridades que se encaixam desde o choro, jazz, jazz-brasileiro, orquestras sinfônicas e outras bandas.</p>
 
            <h1>Vídeo a respeito:</h1>
 
