--- a/api-site/public/login.html
+++ b/api-site/public/login.html
@@ -13,11 +13,10 @@
  
     <header id="header">
         <div class="logo">
-            <img src="img/logo.png" alt="Logo do site" >
+            <a href="index.html"><img src="img/logo.png" alt="Logo do site" ></a>
         </div>
             
             <div class="navegacao">
-                <a href="index.html">Home</a>
                 <a href="pagina01.html">Conteúdo</a>
                 <a href="sobre_mim.html">Sobre mim</a>
                 <a href="login.html">Login</a>
@@ -25,6 +24,7 @@
             </div>
 
     </header>
+
 
     <div class="container">
         <div class="login-box">
