--- a/api-site/public/sobre_mim.html
+++ b/api-site/public/sobre_mim.html
@@ -11,13 +11,13 @@
 
 </head>
 <body>
+    
     <header id="header">
         <div class="logo">
-            <img src="img/logo.png" alt="Logo do site" >
+            <a href="index.html"><img src="img/logo.png" alt="Logo do site" ></a>
         </div>
             
             <div class="navegacao">
-                <a href="index.html">Home</a>
                 <a href="pagina01.html">Conteúdo</a>
                 <a href="sobre_mim.html">Sobre mim</a>
                 <a href="login.html">Login</a>
@@ -25,6 +25,7 @@
             </div>
 
     </header>
+
 
     <div class="container">
         <div class="imagem">
