--- a/api-site/public/login.html
+++ b/api-site/public/login.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="css/login.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
+    <script src="./js/funcoes.js"></script>
+
 
     <title>Login</title>
 </head>
@@ -45,8 +47,68 @@
             </form>
         </div>
 
+        <div id="div_aguardar" class="loading-div"></div>
+
+        <div id="div_erros_login"></div>
+    
+
     </div>
     
     <script src="js/login.js"></script>
 </body>
 </html>
+
+<script>
+
+    function entrar(){
+        aguardar();
+        let email = email_user.value;
+        let senhaVar = senha_user.value;
+
+        fetch("/usuarios/autenticar", {
+            method: "POST",
+            headers: {
+                "Content-Type": "application/json"
+            },
+            body: JSON.stringify({  //  propriedades do meu json
+                email: email,
+                senha: senhaVar,
+            })
+        }).then(function (resposta) {
+            console.log("ESTOU NO THEN DO entrar()!")
+
+            if (resposta.ok) {
+                console.log(resposta);
+
+                resposta.json().then(json => {
+                    console.log(json);
+                    console.log(JSON.stringify(json));      //  Minhas varáveis de sessão
+                    sessionStorage.EMAIL_USUARIO = json.email;
+                    sessionStorage.NOME_USUARIO = json.nome;
+                    sessionStorage.ID_USUARIO = json.id;
+                    sessionStorage.CAMINHO_IMG = json.caminhoImg;
+                    sessionStorage.fkEstilo = json.fkEstilo;
+
+                    setTimeout(function () {
+                        window.location = "./dashboard/cards.html";
+                    }, 1000); // apenas para exibir o loading
+
+                });
+
+            } else {
+
+                console.log("Houve um erro ao tentar realizar o login!");
+
+                resposta.text().then(texto => {
+                    console.error(texto);
+                    finalizarAguardar(texto);
+                });
+            }
+
+        }).catch(function (erro) {
+            console.log(erro);
+        })
+
+        return false;
+}
+</script>
