--- a/api-site/public/dashboard/cards.html
+++ b/api-site/public/dashboard/cards.html
@@ -7,38 +7,28 @@
     <link rel="shortcut icon" href="../assets/img/fave.svg" type="image/x-icon">
     <link rel="stylesheet" href="estilos.css">
     <link rel="stylesheet" href="dashboards.css">
-    <title>estilos dos usuários | Eyre</title>
+    <link rel="shortcut icon" href="../img/logo.png" type="image/x-icon">
+    <title>Dashboards</title>
 
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="../js/funcoes.js"></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <style>
-        .card {
-            display: flex;
-        }
-    </style>
+
 </head>
 
 <body onload="validarSessao()">
 
     <div class="janela">
         <div class="header-left dash-header">
-            <center><img src="../img/logo.png" height="150" width=180></center>
-
+            <img src="../img/logo.png">
             <div class="hello">
                 <h3>Olá, <span id="b_usuario">usuário</span>!</h3>
             </div>
 
-            <div class="btn-nav">
-                <h3>Gráficos</h3>
-            </div>
-
             <div class="btn-nav-white">
-                <a href="./experiencia.html">
-                    <h3>estilos</h3>
-                </a>
+                <h3>Essa é uma dashboard a respeito dos estilos mais escolhidos entre os usuários</h3>
             </div>
 
             <div class="btn-logout" onclick="limparSessao()">
@@ -49,20 +39,24 @@
 
         <div id="img_fundo" class="dash">
             <div class="regua">
+
                 <div class="item-regua" id="poucoacesso">
                     <h4>Abaixo da Média</h4>
-                    <h2>Poucos usuários escolhem seu livro</h2>
+                    <h2>Poucos usuários escolhem esse estilo</h2>
                 </div>
+
                 <div class="item-regua" id="medioacesso">
                     <h4>Tá na média</h4>
-                    <h2>Frequentemente os usuários escolhem seu livro</h2>
+                    <h2>Normalmente os usuários escolhem esse estilo</h2>
                 </div>
+
                 <div class="item-regua" id="muitoacesso" >
                     <h4>Acima da Média</h4>
                     <h2>Muitos usuários escolhem seu livro</h2>
-                </div><br>
-            </div><br><br>
-            <div>
+                </div>
+
+            </div>
+        <div>
                 <canvas id="myChart"></canvas>
             </div>
         </div>
@@ -121,7 +115,7 @@
                                     label: "ESTILOS PREFERIDOS DOS USUÁRIOS",   
                                     data: qtd,  
                                     color: "#212121",
-                                    backgroundColor: "#164C5D",
+                                    backgroundColor: "#212121",
                                     fontSize: 25,
                                     fontFamily: "'Permanent Marker', cursive;",
                                     borderColor: "#212121",
@@ -129,6 +123,7 @@
                                     scaleSteps: 1,
                                     scaleStartValue: 0,
                                     scaleStepWidth: 1
+                                    
                                 },    
                             ]
                         },
