--- a/api-site/public/dashboard/cards.html
+++ b/api-site/public/dashboard/cards.html
@@ -46,13 +46,13 @@
                 </div>
 
                 <div class="item-regua" id="medioacesso">
-                    <h4>Tá na média</h4>
+                    <h4>Está na média</h4>
                     <h2>Normalmente os usuários escolhem esse estilo</h2>
                 </div>
 
                 <div class="item-regua" id="muitoacesso" >
                     <h4>Acima da Média</h4>
-                    <h2>Muitos usuários escolhem seu livro</h2>
+                    <h2>Muitos usuários escolhem esse estilo </h2>
                 </div>
 
             </div>
